--- a/SwagLabs/test-output/index.html
+++ b/SwagLabs/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\meetr\AppData\Local\Temp\testng-eclipse-142024325\testng-customsuite.xml</span>
+                    <span>C:\Users\meetr\AppData\Local\Temp\testng-eclipse-871490494\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,6 +101,11 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="addToCartMethod(Sauce Labs Backpack#Sauce Labs Fleece Jacket#Sauce Labs Onesie, Sauce Labs Backpack#Sauce Labs Fleec...)">addToCartMethod(Sauce Labs Backpack#Sauce Labs Fleece Jacket#Sauce Labs Onesie, Sauce Labs Backpack#Sauce Labs Fleec...)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="loginMethod(standard_user, secret_sauce, PRODUCTS)">loginMethod(standard_user, secret_sauce, PRODUCTS)</a> <!-- method navigator-link -->
@@ -113,12 +118,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="loginTestFailedMethod( , secret_sauce, Epic sadface: Username and password do not match any user in this service)">loginTestFailedMethod( , secret_sauce, Epic sadface: Username and password do not match any user in this service)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="loginTestFailedMethod(locked_out_user, secret_sauce, Epic sadface: Sorry, this user has been locked out.)">loginTestFailedMethod(locked_out_user, secret_sauce, Epic sadface: Sorry, this user has been locked out.)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="loginTestFailedMethod(locked_out_user, secret_sauce, Epic sadface: Sorry, this user has been locked out.)">loginTestFailedMethod(locked_out_user, secret_sauce, Epic sadface: Sorry, this user has been locked out.)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.LoginTest" class="method navigator-link" hash-for-method="loginTestFailedMethod( , secret_sauce, Epic sadface: Username and password do not match any user in this service)">loginTestFailedMethod( , secret_sauce, Epic sadface: Username and password do not match any user in this service)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,6 +146,14 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="addToCartMethod(Sauce Labs Backpack#Sauce Labs Fleece Jacket#Sauce Labs Onesie, Sauce Labs Backpack#Sauce Labs Fleec...)">
+                  </a> <!-- addToCartMethod(Sauce Labs Backpack#Sauce Labs Fleece Jacket#Sauce Labs Onesie, Sauce Labs Backpack#Sauce Labs Fleec...) -->
+                  <span class="method-name">addToCartMethod</span>
+                  <span class="parameters">(Sauce Labs Backpack#Sauce Labs Fleece Jacket#Sauce Labs Onesie,Sauce Labs Backpack#Sauce Labs Fleece Jacket#Sauce Labs Onesie)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="loginMethod(standard_user, secret_sauce, PRODUCTS)">
                   </a> <!-- loginMethod(standard_user, secret_sauce, PRODUCTS) -->
                   <span class="method-name">loginMethod</span>
@@ -157,18 +170,18 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="loginTestFailedMethod( , secret_sauce, Epic sadface: Username and password do not match any user in this service)">
-                  </a> <!-- loginTestFailedMethod( , secret_sauce, Epic sadface: Username and password do not match any user in this service) -->
-                  <span class="method-name">loginTestFailedMethod</span>
-                  <span class="parameters">( ,secret_sauce,Epic sadface: Username and password do not match any user in this service)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="loginTestFailedMethod(locked_out_user, secret_sauce, Epic sadface: Sorry, this user has been locked out.)">
                   </a> <!-- loginTestFailedMethod(locked_out_user, secret_sauce, Epic sadface: Sorry, this user has been locked out.) -->
                   <span class="method-name">loginTestFailedMethod</span>
                   <span class="parameters">(locked_out_user,secret_sauce,Epic sadface: Sorry, this user has been locked out.)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginTestFailedMethod( , secret_sauce, Epic sadface: Username and password do not match any user in this service)">
+                  </a> <!-- loginTestFailedMethod( , secret_sauce, Epic sadface: Username and password do not match any user in this service) -->
+                  <span class="method-name">loginTestFailedMethod</span>
+                  <span class="parameters">( ,secret_sauce,Epic sadface: Username and password do not match any user in this service)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -176,7 +189,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\meetr\AppData\Local\Temp\testng-eclipse-142024325\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\meetr\AppData\Local\Temp\testng-eclipse-871490494\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -225,28 +238,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginMethod')
+data.setCell(0, 1, 'addToCartMethod')
 data.setCell(0, 2, 'tests.LoginTest')
-data.setCell(0, 3, 1400);
+data.setCell(0, 3, 1929);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginTestFailedMethod')
+data.setCell(1, 1, 'loginMethod')
 data.setCell(1, 2, 'tests.LoginTest')
-data.setCell(1, 3, 982);
+data.setCell(1, 3, 1135);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'loginTestFailedMethod')
 data.setCell(2, 2, 'tests.LoginTest')
-data.setCell(2, 3, 942);
+data.setCell(2, 3, 888);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'loginTestFailedMethod')
 data.setCell(3, 2, 'tests.LoginTest')
-data.setCell(3, 3, 884);
+data.setCell(3, 3, 849);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'loginTestFailedMethod')
+data.setCell(4, 2, 'tests.LoginTest')
+data.setCell(4, 3, 681);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -279,15 +296,19 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">loginTestFailedMethod(locked_out_user, secret_sauce, Epic sadface: Sorry, this user has been locked out.)</span>
-                <span class="method-start">891 ms</span>
+                <span class="method-start">689 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">loginTestFailedMethod(standard_user,  , Epic sadface: Username and password do not match any user in this service)</span>
-                <span class="method-start">1877 ms</span>
+                <span class="method-start">1543 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">loginMethod(standard_user, secret_sauce, PRODUCTS)</span>
-                <span class="method-start">2839 ms</span>
+                <span class="method-start">2443 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">addToCartMethod(Sauce Labs Backpack#Sauce Labs Fleece Jacket#Sauce Labs Onesie, Sauce Labs Backpack#Sauce Labs Fleec...)</span>
+                <span class="method-start">3583 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
