--- a/SwagLabs/test-output/old/Default suite/methods.html
+++ b/SwagLabs/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="866d69">  <td>23/01/24 11:03:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTestFailedMethod(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tests.LoginTest@250b236d]">loginTestFailedMethod</td> 
-  <td>main@1277716905</td>   <td></td> </tr>
-<tr bgcolor="866d69">  <td>23/01/24 11:03:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTestFailedMethod(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tests.LoginTest@250b236d]">loginTestFailedMethod</td> 
-  <td>main@1277716905</td>   <td></td> </tr>
-<tr bgcolor="866d69">  <td>23/01/24 11:03:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTestFailedMethod(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:tests.LoginTest@250b236d]">loginTestFailedMethod</td> 
-  <td>main@1277716905</td>   <td></td> </tr>
-<tr bgcolor="866d69">  <td>23/01/24 11:03:46</td>   <td>962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginMethod(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:tests.LoginTest@250b236d]">loginMethod</td> 
-  <td>main@1277716905</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>23/01/28 11:41:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTestFailedMethod(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:tests.LoginTest@2849434b]">loginTestFailedMethod</td> 
+  <td>main@1901824111</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>23/01/28 11:41:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTestFailedMethod(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:tests.LoginTest@2849434b]">loginTestFailedMethod</td> 
+  <td>main@1901824111</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>23/01/28 11:41:37</td>   <td>900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginMethod(java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:tests.LoginTest@2849434b]">loginMethod</td> 
+  <td>main@1901824111</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>23/01/28 11:41:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTestFailedMethod(java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:tests.LoginTest@2849434b]">loginTestFailedMethod</td> 
+  <td>main@1901824111</td>   <td></td> </tr>
+<tr bgcolor="bca8a3">  <td>23/01/28 11:41:38</td>   <td>2040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.addToCartMethod(java.lang.String,java.lang.String)[pri:3, instance:tests.LoginTest@2849434b]">addToCartMethod</td> 
+  <td>main@1901824111</td>   <td></td> </tr>
 </table>
